[tool.poetry]
name = "gigacommit"
version = "0.1.0"
description = ""
authors = ["Roman Sotnikov <axeman.ofic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
gigachat = "^0.1.16"
typer = {extras = ["all"], version = "^0.9.0"}
platformdirs = "^4.2.0"
rtoml = "^0.10.0"

[tool.poetry.scripts]
gc = "gigacommit.__main__:app"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pyright = "^1.1.351"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
