[tool.poetry]
name = "gigacommit"
version = "1.0.0"
description = ""
authors = ["Roman Sotnikov <axeman.ofic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
gigachat = "^0.1.16"
typer = {extras = ["all"], version = "^0.9.0"}
platformdirs = "^4.2.0"
rtoml = "^0.10.0"

[tool.poetry.scripts]
gc = "gigacommit.__main__:app"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.20.0"
black = "^24.2.0"
pyright = "^1.1.351"
ruff = "^0.2.2"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "1.0.0"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
  "pyproject.toml:^version",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
